[gd_scene load_steps=28 format=2]

[ext_resource path="res://campaign_BG.png" type="Texture" id=1]
[ext_resource path="res://LevelOrb.tscn" type="PackedScene" id=2]
[ext_resource path="res://LevelOrbManager.gd" type="Script" id=3]
[ext_resource path="res://SpaceShip.tscn" type="PackedScene" id=4]
[ext_resource path="res://MapEditor.gd" type="Script" id=5]
[ext_resource path="res://Connections.gd" type="Script" id=6]
[ext_resource path="res://BigYanoneFont.tres" type="Theme" id=7]
[ext_resource path="res://UI/bookmark_off.png" type="Texture" id=8]
[ext_resource path="res://UI/bookmark_on.png" type="Texture" id=9]
[ext_resource path="res://LevelInfo.gd" type="Script" id=10]
[ext_resource path="res://check_yes.png" type="Texture" id=11]
[ext_resource path="res://check_no.png" type="Texture" id=12]
[ext_resource path="res://YanoneKaffeesatz-Bold.otf" type="DynamicFontData" id=13]
[ext_resource path="res://RumpusRequests.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI/bookmark_disabled.png" type="Texture" id=15]
[ext_resource path="res://BaseUI.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/save.png" type="Texture" id=17]
[ext_resource path="res://LandmarkManager.gd" type="Script" id=18]
[ext_resource path="res://UI/back_yellow.png" type="Texture" id=19]
[ext_resource path="res://UI/back_white.png" type="Texture" id=20]
[ext_resource path="res://Landmark.tscn" type="PackedScene" id=21]
[ext_resource path="res://UI/copy_active.png" type="Texture" id=22]
[ext_resource path="res://UI/copy_inactive.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.27451, 0.27451, 0.27451, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="RumpusRequests" parent="." instance=ExtResource( 14 )]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="LandmarkManager" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="AnimatedSprite" parent="LandmarkManager" instance=ExtResource( 21 )]
position = Vector2( 597, 660 )

[node name="AnimatedSprite2" parent="LandmarkManager" instance=ExtResource( 21 )]
position = Vector2( 1106, 572 )
elId = 9
dep = 90
sc = 3

[node name="AnimatedSprite3" parent="LandmarkManager" instance=ExtResource( 21 )]
position = Vector2( 950, 244 )
elId = 3
dep = 50

[node name="Connections" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="LevelOrbs" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="first_level" parent="LevelOrbs" instance=ExtResource( 2 )]
position = Vector2( 381, 308 )
bm = 3
levelID = "lsdmv1t"

[node name="second_level" parent="LevelOrbs" instance=ExtResource( 2 )]
position = Vector2( 811, 500 )
gr18 = 1
b_time = 30.5
pre = PoolStringArray( "lsdmv1t" )
levelID = "0c5267f"

[node name="third_lvl_1" parent="LevelOrbs" instance=ExtResource( 2 )]
position = Vector2( 1394, 300 )
ch = 1
b_time = 30.0
pre = PoolStringArray( "0c5267f" )
n = "cool level"
weather = 1
bm = 2
sc = 1
levelID = "wb0lhhs"

[node name="third_lvl_2" parent="LevelOrbs" instance=ExtResource( 2 )]
position = Vector2( 856, 1034 )
pre_gr18 = 1
pre = PoolStringArray( "0c5267f" )
weather = 1
bm = 1
scpre = 1
levelID = "tzmz046"

[node name="fourth_lvl" parent="LevelOrbs" instance=ExtResource( 2 )]
position = Vector2( 1350, 807 )
pre_all = 1
pre_coin = 1
pre = PoolStringArray( "wb0lhhs", "tzmz046" )
weather = 1
sc = 1
scpre = 1
scpost = 1
levelID = "hmt6wzj"

[node name="Node" type="Node" parent="LevelOrbs"]

[node name="SpaceShip" parent="." instance=ExtResource( 4 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CameraZoom" type="VBoxContainer" parent="UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -200.0
margin_right = 80.0
margin_bottom = 200.0
theme = ExtResource( 7 )

[node name="In" type="Button" parent="UI/CameraZoom"]
margin_right = 80.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="Out" type="Button" parent="UI/CameraZoom"]
margin_top = 202.0
margin_right = 80.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[node name="LevelInfo" type="PanelContainer" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -188.0
theme = SubResource( 2 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/LevelInfo"]
margin_right = 1360.0
margin_bottom = 188.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LevelInfo/HBoxContainer"]
margin_right = 1021.0
margin_bottom = 188.0

[node name="TitleBookmark" type="HBoxContainer" parent="UI/LevelInfo/HBoxContainer/VBoxContainer"]
margin_right = 1021.0
margin_bottom = 93.0

[node name="LevelTitle" type="Label" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/TitleBookmark"]
margin_top = 22.0
margin_right = 318.0
margin_bottom = 70.0
text = "LEVEL NAME PLACEHOLDER..."

[node name="LevelCode" type="Label" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/TitleBookmark"]
margin_left = 322.0
margin_top = 22.0
margin_right = 432.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0.952941, 1, 1 )
text = " (PLCHLD)"

[node name="TextureButton" type="TextureButton" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/TitleBookmark"]
margin_left = 436.0
margin_right = 527.0
margin_bottom = 93.0
toggle_mode = true
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 22 )

[node name="BookmarkButton" type="TextureButton" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/TitleBookmark"]
margin_left = 531.0
margin_right = 622.0
margin_bottom = 93.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 15 )

[node name="BookmarkStatus" type="Label" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/TitleBookmark"]
margin_left = 626.0
margin_top = 22.0
margin_right = 626.0
margin_bottom = 70.0

[node name="Checks" type="HBoxContainer" parent="UI/LevelInfo/HBoxContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 1021.0
margin_bottom = 168.0

[node name="CompletedCheck" type="CheckBox" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks"]
margin_right = 156.0
margin_bottom = 71.0
custom_icons/checked_disabled = ExtResource( 11 )
custom_icons/checked = ExtResource( 11 )
custom_icons/unchecked = ExtResource( 12 )
text = "Beaten"

[node name="AllJems" type="CheckBox" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks"]
margin_left = 160.0
margin_right = 332.0
margin_bottom = 71.0
custom_icons/checked_disabled = ExtResource( 11 )
custom_icons/checked = ExtResource( 11 )
custom_icons/unchecked = ExtResource( 12 )
text = "All Jems"

[node name="FoundGR17" type="CheckBox" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks"]
margin_left = 336.0
margin_right = 558.0
margin_bottom = 71.0
custom_icons/checked_disabled = ExtResource( 11 )
custom_icons/checked = ExtResource( 11 )
custom_icons/unchecked = ExtResource( 12 )
text = "Found GR-17"

[node name="AllBugs" type="CheckBox" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks"]
margin_left = 562.0
margin_right = 730.0
margin_bottom = 71.0
custom_icons/checked_disabled = ExtResource( 11 )
custom_icons/checked = ExtResource( 11 )
custom_icons/unchecked = ExtResource( 12 )
text = "All Bugs"

[node name="Benchmark" type="CheckBox" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks"]
margin_left = 734.0
margin_right = 878.0
margin_bottom = 71.0
custom_icons/checked_disabled = ExtResource( 11 )
custom_icons/checked = ExtResource( 11 )
custom_icons/unchecked_disabled = ExtResource( 12 )
custom_icons/unchecked = ExtResource( 12 )
text = "O.T.D."

[node name="score_bench" type="CheckBox" parent="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks"]
margin_left = 882.0
margin_right = 1021.0
margin_bottom = 71.0
custom_icons/checked_disabled = ExtResource( 11 )
custom_icons/checked = ExtResource( 11 )
custom_icons/unchecked_disabled = ExtResource( 12 )
custom_icons/unchecked = ExtResource( 12 )
text = "Score"

[node name="Control" type="Control" parent="UI/LevelInfo/HBoxContainer"]
margin_left = 1025.0
margin_right = 1070.0
margin_bottom = 188.0
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="UI/LevelInfo/HBoxContainer"]
margin_left = 1074.0
margin_right = 1360.0
margin_bottom = 188.0
text = "SAVE PROGRESS"
icon = ExtResource( 17 )

[node name="Return" type="TextureButton" parent="UI"]
margin_right = 117.0
margin_bottom = 119.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 20 )
texture_disabled = ExtResource( 19 )

[node name="PanelContainer" type="PanelContainer" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer"]
margin_right = 1366.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="UI/PanelContainer/VBoxContainer"]
margin_right = 1366.0
margin_bottom = 120.0
theme = ExtResource( 7 )
text = "Campaign: Test by Radio inactive"

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 1366.0
margin_bottom = 324.0
custom_constants/margin_top = 200

[node name="StartButton" type="Button" parent="UI/PanelContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 1366.0
margin_bottom = 454.0
theme = ExtResource( 7 )
text = "Start Campaign"

[node name="BaseUI" parent="UI" instance=ExtResource( 16 )]
visible = false

[connection signal="update_ui" from="." to="UI/LevelInfo" method="_on_Node2D_update_ui"]
[connection signal="bookmark_set_result" from="RumpusRequests" to="UI/LevelInfo" method="_on_RumpusRequests_bookmark_set_result"]
[connection signal="update_ui" from="SpaceShip" to="UI/LevelInfo" method="_on_SpaceShip_update_ui"]
[connection signal="pressed" from="UI/CameraZoom/In" to="SpaceShip" method="_on_In_pressed"]
[connection signal="pressed" from="UI/CameraZoom/Out" to="SpaceShip" method="_on_Out_pressed"]
[connection signal="current_level_bookmark" from="UI/LevelInfo" to="RumpusRequests" method="_on_LevelInfo_current_level_bookmark"]
[connection signal="toggled" from="UI/LevelInfo/HBoxContainer/VBoxContainer/TitleBookmark/TextureButton" to="UI/LevelInfo" method="_on_TextureButton_toggled"]
[connection signal="toggled" from="UI/LevelInfo/HBoxContainer/VBoxContainer/TitleBookmark/BookmarkButton" to="UI/LevelInfo" method="_on_BookmarkButton_toggled"]
[connection signal="toggled" from="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks/CompletedCheck" to="." method="_on_CompletedCheck_toggled"]
[connection signal="toggled" from="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks/AllJems" to="." method="_on_AllJems_toggled"]
[connection signal="toggled" from="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks/FoundGR17" to="." method="_on_FoundGR17_toggled"]
[connection signal="toggled" from="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks/AllBugs" to="." method="_on_AllBugs_toggled"]
[connection signal="toggled" from="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks/Benchmark" to="." method="_on_Benchmark_toggled"]
[connection signal="toggled" from="UI/LevelInfo/HBoxContainer/VBoxContainer/Checks/score_bench" to="." method="_on_score_bench_toggled"]
[connection signal="pressed" from="UI/LevelInfo/HBoxContainer/SaveButton" to="LevelOrbs" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="UI/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="UI/PanelContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="load_campaign_from_start_menu" from="UI/BaseUI" to="." method="_on_BaseUI_load_campaign_from_start_menu"]
